Implemented a login and user service

--- a/RaceManager/RaceManager.Client/App.config
+++ b/RaceManager/RaceManager.Client/App.config
@@ -9,6 +9,8 @@
         <binding name="BasicHttpBinding_IDriverService" />
         <binding name="BasicHttpBinding_IVehicleService" />
         <binding name="BasicHttpBinding_IRaceService" />
+        <binding name="BasicHttpBinding_ILoginService" />
+        <binding name="BasicHttpBinding_IUserService" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -21,6 +23,12 @@
       <endpoint address="http://localhost:51257/Service/Services/RaceService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IRaceService"
         contract="RaceService.IRaceService" name="BasicHttpBinding_IRaceService" />
+      <endpoint address="http://localhost:51257/Service/Services/LoginService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILoginService"
+        contract="LoginService.ILoginService" name="BasicHttpBinding_ILoginService" />
+      <endpoint address="http://localhost:51257/Service/Services/UserService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IUserService"
+        contract="UserService.IUserService" name="BasicHttpBinding_IUserService" />
     </client>
   </system.serviceModel>
 </configuration>
