--- a/RaceManager/RaceManager.Server/Web.config
+++ b/RaceManager/RaceManager.Server/Web.config
@@ -20,6 +20,9 @@
       </serviceBehaviors>
     </behaviors>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    <protocolMapping>
+      <add binding="basicHttpBinding" scheme="https" />
+    </protocolMapping>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
