--- a/RaceManager/RaceManager.Server/RaceManager.Server.csproj
+++ b/RaceManager/RaceManager.Server/RaceManager.Server.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Service\Services\UserService.svc" />
     <Content Include="Service\Services\DriverService.svc" />
     <Content Include="Service\Services\LoginService.svc" />
     <Content Include="Service\Services\VehicleService.svc" />
@@ -78,11 +79,21 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess\Core\Domain\User.cs" />
+    <Compile Include="DataAccess\Core\Repositories\IUserRepository.cs" />
+    <Compile Include="DataAccess\Persistence\Repositories\UserRepository.cs" />
+    <Compile Include="Service\Core\DataMappers\IUserMapper.cs" />
+    <Compile Include="Service\Core\DataTransferObjects\UserDTO.cs" />
+    <Compile Include="Service\Core\Security\IAuthenticationManager.cs" />
+    <Compile Include="Service\Core\Security\IAuthorizationManager.cs" />
+    <Compile Include="Service\Core\Security\ISecurityTokenManager.cs" />
+    <Compile Include="Service\Core\Services\IUserService.cs" />
     <Compile Include="Service\DataMappers\DataMapper.cs" />
     <Compile Include="Service\DataMappers\DriverMapper.cs" />
     <Compile Include="Service\Core\DataMappers\IVehicleMapper.cs" />
     <Compile Include="Service\Core\DataMappers\IRaceMapper.cs" />
     <Compile Include="Service\Core\DataMappers\IDriverMapper.cs" />
+    <Compile Include="Service\DataMappers\UserMapper.cs" />
     <Compile Include="Service\DataMappers\RaceMapper.cs" />
     <Compile Include="Service\DataMappers\VehicleMapper.cs" />
     <Compile Include="Service\Core\DataMappers\IDataMapper.cs" />
@@ -110,6 +121,12 @@
     <Compile Include="Service\Core\Services\IVehicleService.cs" />
     <Compile Include="Service\Core\Services\IRaceService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\Security\AuthenticationManager.cs" />
+    <Compile Include="Service\Security\AuthorizationManager.cs" />
+    <Compile Include="Service\Security\SecurityTokenManager.cs" />
+    <Compile Include="Service\Services\UserService.svc.cs">
+      <DependentUpon>UserService.svc</DependentUpon>
+    </Compile>
     <Compile Include="Service\Services\DriverService.svc.cs">
       <DependentUpon>DriverService.svc</DependentUpon>
     </Compile>
