--- a/RaceManager/RaceManager.Server/Web.config
+++ b/RaceManager/RaceManager.Server/Web.config
@@ -21,7 +21,7 @@
     </behaviors>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
     <protocolMapping>
-      <add binding="basicHttpBinding" scheme="https" />
+      <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>
   </system.serviceModel>
   <system.webServer>
