--- a/RaceManager/RaceManager.Server/Web.config
+++ b/RaceManager/RaceManager.Server/Web.config
@@ -39,7 +39,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="RaceManagerDb"
+    <add name="RaceManagerDbConnection"
          connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\RaceManagerDb.mdf;Initial Catalog=RaceManagerDb;Integrated Security=True;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
